fix(styles): Better spacing for advices

--- a/src/stylesheets/modules/advice.styl
+++ b/src/stylesheets/modules/advice.styl
@@ -70,10 +70,9 @@ $advice-icon()
   margin: 0 6em $rhythm(0.5)
 
 .advice__action
-  margin-top: $rhythm(2)
-  margin-bottom: $rhythm(0.5)
+  margin: $rhythm(1) 0
+  $btn-action()
 
 .advice__description--smaller
   font-size: 1.0em
   margin: 0 16em $rhythm(0.5)
-
